--- a/furama-web/tsconfig.json
+++ b/furama-web/tsconfig.json
@@ -14,6 +14,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
+    "suppressImplicitAnyIndexErrors" : true,
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2020",
@@ -27,6 +28,7 @@
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true
+    "strictTemplates": true,
+    "suppressImplicitAnyIndexErrors" : true
   }
 }
